--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^10.2.10",
     "@nestjs/core": "^10.2.10",
     "@nestjs/mapped-types": "^2.0.4",
     "@nestjs/platform-express": "^10.2.10",
-    "@prisma/client": "5.6.0",
+    "@prisma/client": "^5.21.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "nodemailer": "^6.9.15",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1"
   },
@@ -47,7 +49,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "jest": "^29.7.0",
     "prettier": "^3.1.0",
-    "prisma": "^5.7.0",
+    "prisma": "^5.21.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
