--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^10.2.10",
     "@nestjs/core": "^10.2.10",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "^2.0.4",
     "@nestjs/platform-express": "^10.2.10",
     "@prisma/client": "^5.21.1",
+    "@types/bcryptjs": "^2.4.6",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "nodemailer": "^6.9.15",
